--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
     <meta name="description" content="Your description goes here" />
     <meta name="keywords" content="one, two, three" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <!-- Font Family -->
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Mulish:wght@300;400;700;900&family=Ovo&display=swap"
+      rel="stylesheet"
+    />
 
     <title>Hair Salon</title>
 
