--- a/index.html
+++ b/index.html
@@ -11,6 +11,12 @@
       href="https://fonts.googleapis.com/css2?family=Mulish:wght@300;400;700;900&family=Ovo&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/simple-line-icons/2.5.5/css/simple-line-icons.min.css"
+      integrity="sha512-QKC1UZ/ZHNgFzVKSAhV5v5j73eeL9EEN289eKAEFaAjgAiobVAnVv/AGuPbXsKl1dNoel3kNr6PYnSiTzVVBCw=="
+      crossorigin="anonymous"
+    />
 
     <title>Hair Salon</title>
 
@@ -19,6 +25,30 @@
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
+    <header>
+      <div class="logo">
+        <img src="./images/dark_logo.png" alt="logo" class="logo-img" />
+      </div>
+      <nav class="main-nav">
+        <ul class="nav-list">
+          <li class="list-item"><a href="#">Home</a></li>
+          <li class="list-item"><a href="#">About</a></li>
+          <li class="list-item"><a href="#">Services</a></li>
+          <li class="list-item"><a href="#">Lookbook</a></li>
+          <li class="list-item"><a href="#">News</a></li>
+          <li class="list-item"><a href="#">Shop</a></li>
+          <li class="list-item"><a href="#">Contact</a></li>
+          <li class="list-item"><a href="#" class="search-icon"></a></li>
+          <li class="list-item">
+            <a href="#" class="handbag">i.icon-handbag</a>
+            <span class="count-icon">0</span>
+          </li>
+        </ul>
+      </nav>
+      <div class="book-online">
+        <a href="#">Book Online</a>
+      </div>
+    </header>
     <script type="text/javascript" src="js/main.js"></script>
   </body>
 </html>
