--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
       href="https://fonts.googleapis.com/css2?family=Mulish:wght@300;400;700;900&family=Ovo&display=swap"
       rel="stylesheet"
     />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400;700;900&display=swap"
+      rel="stylesheet"
+    />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/simple-line-icons/2.5.5/css/simple-line-icons.min.css"
@@ -55,11 +60,13 @@
       <section class="section-hero">
         <div class="container">
           <div class="text-content">
-            <h1 class="main-header">Blonde & Highlight</h1>
+            <h1 class="main-header-text">Blonde <br />& Highlight</h1>
             <p class="lead">DIVIDE YOUR UNIQUENESS BY YOUR HAIRS IN STYLE</p>
-            <div class="dots">
-              <a href="#" class="btn btn-dark">Our Services</a>
-            </div>
+            <a href="#" class="btn btn-dark">
+              <div class="dots">
+                <span>Our Services</span>
+              </div>
+            </a>
             <div class="card">
               <h2>Your first visit?</h2>
               <p>-20% OFF FOR THE FIRST CLASSIC HAIR COLORING</p>
