styled the three column section

--- a/index.html
+++ b/index.html
@@ -70,14 +70,59 @@
             <div class="card">
               <h2>Your first visit?</h2>
               <p>-20% OFF FOR THE FIRST CLASSIC HAIR COLORING</p>
-              <div class="dots">
-                <a href="#" class="btn btn-light">Book online</a>
-              </div>
+              <a href="#" class="btn btn-light">
+                <div class="dots">
+                  <span>Book online</span>
+                </div>
+              </a>
             </div>
           </div>
         </div>
         <div class="hours">
           <p>MON - Sun : 7:00AM - 8:00PM</p>
+        </div>
+      </section>
+      <!-- Section 3 column  -->
+      <section class="three-column">
+        <div class="container">
+          <div class="flex">
+            <div class="box">
+              <img
+                src="./images/icons/quality-icon-01.png"
+                alt=""
+                class="img-icon"
+              />
+              <h3 class="box-header">Expert Beauticians</h3>
+              <p class="box-body">
+                Beauty Experts dolor sit amet semiadicing elit maecenas sa
+                faubus mollis expo sail and beauty exten interdum.
+              </p>
+            </div>
+            <div class="box">
+              <img
+                src="./images/icons/quality-icon-02.png"
+                alt=""
+                class="img-icon"
+              />
+              <h3 class="box-header">Quality Services</h3>
+              <p class="box-body">
+                Hair Styling Services sit amet semiadicing elit maecenas sa
+                faubus mollis expo sail and beauty exten interdum.
+              </p>
+            </div>
+            <div class="box">
+              <img
+                src="./images/icons/quality-icon-03.png"
+                alt=""
+                class="img-icon"
+              />
+              <h3 class="box-header">Beauty Products</h3>
+              <p class="box-body">
+                Hair color or Product sit amet semiadicing elit maecenas sa
+                faubus mollis expo sail and beauty exten interdum.
+              </p>
+            </div>
+          </div>
         </div>
       </section>
     </main>
