Mark up for the stylers section done

--- a/index.html
+++ b/index.html
@@ -179,7 +179,11 @@
               </a>
               <h3>Alita Willims</h3>
               <p>- Colourist</p>
-              <div class="styler-social-links">i.</div>
+              <div class="styler-social-links">
+                <i class="fab fa-twitter icon-style"></i>
+                <i class="fab fa-facebook-f icon-style"></i>
+                <i class="fab fa-instagram icon-style"></i>
+              </div>
             </div>
             <div class="styler-box">
               <a href="#" class="styler-img">
@@ -187,6 +191,11 @@
               </a>
               <h3>Alita Willims</h3>
               <p>- Colourist</p>
+              <div class="styler-social-links">
+                <i class="fab fa-twitter icon-style"></i>
+                <i class="fab fa-facebook-f icon-style"></i>
+                <i class="fab fa-instagram icon-style"></i>
+              </div>
             </div>
             <div class="styler-box">
               <a href="#" class="styler-img">
@@ -194,6 +203,11 @@
               </a>
               <h3>Alita Willims</h3>
               <p>- Colourist</p>
+              <div class="styler-social-links">
+                <i class="fab fa-twitter icon-style"></i>
+                <i class="fab fa-facebook-f icon-style"></i>
+                <i class="fab fa-instagram icon-style"></i>
+              </div>
             </div>
             <div class="styler-box">
               <a href="#" class="styler-img">
@@ -201,6 +215,11 @@
               </a>
               <h3>Alita Willims</h3>
               <p>- Colourist</p>
+              <div class="styler-social-links">
+                <i class="fab fa-twitter icon-style"></i>
+                <i class="fab fa-facebook-f icon-style"></i>
+                <i class="fab fa-instagram icon-style"></i>
+              </div>
             </div>
           </div>
         </div>
