--- a/index.html
+++ b/index.html
@@ -222,6 +222,15 @@
               </div>
             </div>
           </div>
+          <div class="promo-section">
+            <h2>Colour Day Offer!</h2>
+            <h3>-10% on haircut color and make-up</h3>
+            <a href="#" class="btn btn-dark">
+              <div class="dots">
+                <span>Book appointment</span>
+              </div>
+            </a>
+          </div>
         </div>
       </section>
     </main>
