Finished adding animation on boxes

--- a/index.html
+++ b/index.html
@@ -169,9 +169,8 @@
       <!-- Stylers Section -->
       <section class="stylers-section">
         <div class="container">
-          <div class="primary-header">
-            <h2>Our Stylers</h2>
-          </div>
+          <h2 class="primary-header">Our Stylers</h2>
+
           <div class="flex">
             <div class="styler-box">
               <a href="#" class="styler-img">
@@ -187,10 +186,22 @@
             </div>
             <div class="styler-box">
               <a href="#" class="styler-img">
-                <img src="./images/Stylist/Styler-01.jpg" alt="" />
+                <img src="./images/Stylist/Styler-02.jpg" alt="" />
               </a>
-              <h3>Alita Willims</h3>
-              <p>- Colourist</p>
+              <h3>Ayesha Lake</h3>
+              <p>- Styler</p>
+              <div class="styler-social-links">
+                <i class="fab fa-twitter icon-style"></i>
+                <i class="fab fa-facebook-f icon-style"></i>
+                <i class="fab fa-instagram icon-style"></i>
+              </div>
+            </div>
+            <div class="styler-box">
+              <a href="#" class="styler-img">
+                <img src="./images/Stylist/Styler-03.jpg" alt="" />
+              </a>
+              <h3>Alen Smith</h3>
+              <p>- Beautician</p>
               <div class="styler-social-links">
                 <i class="fab fa-twitter icon-style"></i>
                 <i class="fab fa-facebook-f icon-style"></i>
@@ -202,19 +213,7 @@
                 <img src="./images/Stylist/Styler-01.jpg" alt="" />
               </a>
               <h3>Alita Willims</h3>
-              <p>- Colourist</p>
-              <div class="styler-social-links">
-                <i class="fab fa-twitter icon-style"></i>
-                <i class="fab fa-facebook-f icon-style"></i>
-                <i class="fab fa-instagram icon-style"></i>
-              </div>
-            </div>
-            <div class="styler-box">
-              <a href="#" class="styler-img">
-                <img src="./images/Stylist/Styler-01.jpg" alt="" />
-              </a>
-              <h3>Alita Willims</h3>
-              <p>- Colourist</p>
+              <p>- Styler</p>
               <div class="styler-social-links">
                 <i class="fab fa-twitter icon-style"></i>
                 <i class="fab fa-facebook-f icon-style"></i>
