Styling the the grid-container

--- a/index.html
+++ b/index.html
@@ -222,13 +222,29 @@
             </div>
           </div>
           <div class="promo-section">
-            <h2>Colour Day Offer!</h2>
-            <h3>-10% on haircut color and make-up</h3>
-            <a href="#" class="btn btn-dark">
-              <div class="dots">
-                <span>Book appointment</span>
-              </div>
-            </a>
+            <div class="promo-body">
+              <h2>Colour Day Offer!</h2>
+              <h3>-10% on haircut color and make-up</h3>
+              <a href="#" class="btn btn-dark">
+                <div class="dots">
+                  <span>Book appointment</span>
+                </div>
+              </a>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- Lookbook Section -->
+      <section class="lookbook-section">
+        <div class="container">
+          <h2 class="primary-header">Our Lookbook</h2>
+          <div class="grid-container">
+            <div class="grid-item photo-00"></div>
+            <div class="grid-item photo-01"></div>
+            <div class="grid-item photo-02"></div>
+            <div class="grid-item photo-03"></div>
+            <div class="grid-item photo-04"></div>
+            <div class="grid-item photo-05"></div>
           </div>
         </div>
       </section>
