--- a/index.html
+++ b/index.html
@@ -249,6 +249,7 @@
         </div>
       </section>
     </main>
+    <footer class="main-footer"></footer>
     <script type="text/javascript" src="js/main.js"></script>
   </body>
 </html>
